[gd_scene load_steps=9 format=3 uid="uid://cwxgusqqwr28s"]

[ext_resource type="Script" uid="uid://pbbpkc0mevn4" path="res://Player/player.gd" id="1_l8h54"]
[ext_resource type="Texture2D" uid="uid://b01e6xj3g6m8e" path="res://Assets/Sprites/Player_WIP.png" id="2_btcbx"]
[ext_resource type="PackedScene" uid="uid://dby72e1krudx5" path="res://Hitboxes/hurtbox.tscn" id="3_btcbx"]
[ext_resource type="Texture2D" uid="uid://ysx1w4uk01v3" path="res://Assets/Sprites/progress_bar_empty.png" id="4_k53q1"]
[ext_resource type="Texture2D" uid="uid://dcoowp11gi60f" path="res://Assets/Sprites/progress_bar_fill.png" id="5_fhl08"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ntmi"]
height = 26.0

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_4ntmi"]
states/Start/position = Vector2(220, 100)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_btcbx"]
radius = 12.0
height = 56.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(-2.38419e-07, 0)
collision_layer = 2
script = ExtResource("1_l8h54")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(2.38419e-07, -33)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_btcbx")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(2.38419e-07, 0)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_4ntmi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_4ntmi")

[node name="Hurtbox" parent="." instance=ExtResource("3_btcbx")]
position = Vector2(2.38419e-07, -18)
collision_layer = 4
collision_mask = 80

[node name="CollisionShape" parent="Hurtbox" index="0"]
shape = SubResource("CapsuleShape2D_btcbx")

[node name="ThrowCooldownTimer" type="Timer" parent="."]

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
offset_left = -36.0
offset_top = -96.0
offset_right = 37.0
offset_bottom = -75.0
ratio = 4.0

[node name="ChargeMeter" type="TextureProgressBar" parent="AspectRatioContainer"]
visible = false
layout_mode = 2
max_value = 750.0
step = 15.0
nine_patch_stretch = true
texture_under = ExtResource("4_k53q1")
texture_progress = ExtResource("5_fhl08")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_hurtbox_invincibility_started"]
[connection signal="timeout" from="ThrowCooldownTimer" to="." method="_on_throw_cooldown_timer_timeout"]

[editable path="Hurtbox"]
